@@ -43,5 +43,6 @@ mono/dis/Makefile
 mono/cil/Makefile
 mono/cli/Makefile
 mono/interpreter/Makefile
+mono/tests/Makefile
 doc/Makefile
 ])
